--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,16 +1,12 @@
 spring.application.name=user-service
-server.port=8081
-spring.thymeleaf.cache=false
-# Configuration MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/userDB
+server.port=8082
+
+spring.datasource.url=jdbc:mysql://localhost:3306/libraryDB
 spring.datasource.username=root
 spring.datasource.password=yasser331790
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
-# Eureka
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
