--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.cloud.gateway.routes[0].id=user-service
 spring.cloud.gateway.routes[0].uri=http://localhost:8082
 spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
+
+
+spring.cloud.gateway.routes[1].id=user-service
+spring.cloud.gateway.routes[1].uri=http://localhost:8082
+spring.cloud.gateway.routes[1].predicates[0]=Path=/users/**
